--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,4 +6,30 @@
 
 body {
   background-color: #f5f5f5;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: #333;
+}
+
+.d_f {
+  display: flex;
+}
+
+.justify_content_center {
+  justify-content: center;
+}
+
+.align_item_center {
+  align-items: center;
+}
+
+.my_2 {
+  margin: 2rem 0;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+a:hover {
+  font-style: italic;
 }
