--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,6 @@
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -10,27 +13,15 @@ body {
     color: #333;
 }
 
-.d_f {
-    display: flex;
-}
+.blog {
 
-.justify_content_center {
-    justify-content: center;
-}
+    .card {
+        margin: 1rem 0.5rem;
+    }
 
-.align_item_center {
-    align-items: center;
-}
-
-.my_2 {
-    margin: 2rem 0;
-}
-
-a {
-    color: #333;
-    text-decoration: none;
-
-    &:hover {
-        font-style: italic;
+    .post_image {
+        height: 200px;
+        object-fit: cover;
+        object-position: center;
     }
 }
